fix(voiceSearch): remove wrong bg color on safari

--- a/src/scss/themes/algolia.scss
+++ b/src/scss/themes/algolia.scss
@@ -632,6 +632,7 @@ a[class^='ais-'] {
   padding: 4px;
   border-radius: 50%;
   color: $port-gore;
+  background-color: transparent;
 }
 
 .ais-VoiceSearch-button svg {
